# mediagrab-socialmedia-downloader

./: .replit  README.md  app.py  instagram_downloader.py  pyproject.toml  requirements.txt
static/css/: custom.css
static/js/: script.js
templates/: index.html  layout.html
∕tmp∕tmp8thbp6vt/: 2025-04-19_13-55-17_UTC.json.xz  2025-04-19_13-55-17_UTC.txt
∕tmp∕tmpooo7_ad6/: 2025-04-19_13-55-17_UTC.json.xz
