[tool.poetry]
name = "mediagrab-socialmedia-downloader"
version = "0.1.0"
description = "Add your description here"
authors = ["callmeshaun <your-email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
email-validator = ">=2.2.0"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
instaloader = ">=4.14.1"
psycopg2-binary = ">=2.9.10"
requests = ">=2.32.3"
trafilatura = ">=2.0.0"
werkzeug = ">=3.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"